<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.SignUp">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrows"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/label1"
        app:layout_constraintTop_toBottomOf="@id/label1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_to_continue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/label1"
        app:layout_constraintTop_toBottomOf="@id/label2"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        style="@style/edtstyle"
        android:layout_width="353dp"
        android:layout_height="51dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPhno"
        android:hint="@string/phone"
        style="@style/edtstyle"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:hint="@string/email"
        style="@style/edtstyle"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPhno" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:hint="@string/password"
        style="@style/edtstyle"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtAddress"
        android:hint="@string/address"
        style="@style/edtstyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_to_tearms_and_condition"
        app:layout_constraintStart_toStartOf="@id/edtAddress"
        app:layout_constraintTop_toBottomOf="@id/edtAddress"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/colorWhite"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/bg_button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkTerms"/>

</androidx.constraintlayout.widget.ConstraintLayout>